--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name:         WP Postcss
+Theme Name:         Modern WordPress Theme
 Theme URI:          http://jstn.ch/ck
-Description:       	A theme to help learn you some WordPress and Postcss
+Description:       	A modern WordPress Theme
 Version:            0.1.0
 Author:             jchck
 Author URI:         http://jstn.ch/ck
