the specific basscss imports

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,17 +2,17 @@
 
 /* Basscss Modules */
 
-@import 'basscss-type-scale';
-@import 'basscss-typography';
-@import 'basscss-layout';
-@import 'basscss-align';
-@import 'basscss-margin';
-@import 'basscss-padding';
-@import 'basscss-grid';
-@import 'basscss-flexbox';
-@import 'basscss-position';
-@import 'basscss-border';
-@import 'basscss-hide';
+@import 'basscss/node_modules/basscss-type-scale';
+@import 'basscss/node_modules/basscss-typography';
+@import 'basscss/node_modules/basscss-layout';
+@import 'basscss/node_modules/basscss-align';
+@import 'basscss/node_modules/basscss-margin';
+@import 'basscss/node_modules/basscss-padding';
+@import 'basscss/node_modules/basscss-grid';
+@import 'basscss/node_modules/basscss-flexbox';
+@import 'basscss/node_modules/basscss-position';
+@import 'basscss/node_modules/basscss-border';
+@import 'basscss/node_modules/basscss-hide';
 
 /* Basscss Additional Modules */
 
